--- a/index.html
+++ b/index.html
@@ -1,22 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>五子棋</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-	<canvas id="canvas1" width="600" height="600"></canvas>
-	<canvas id="canvas2" width="600" height="600"></canvas>
-	<div id="stop"></div>
-	<div id="win">
-		<h3 class='vic'></h3>
-		<h4>再来一局？</h4>
-		<span class="yes">好的</span>
-		<span class="no">不了</span>
-	</div>
-	<div id='reset'>重 置</div>
-	<div id="regret">悔 棋</div>
-	<script src='js/index.js'></script>
+	<canvas id="canvas" width="320" height="320"></canvas>
+  <script src="js/touch-0.2.14.min.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
